kustomize /base /ingress /ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: default
spec:
  ingressClassName: "nginx"
  rules:
  - host: invalid.demo.divyanshpaliwal.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: app-1-service
            port: 
                number: 8000
